# python-deep-reinforcement-learning-in-action

./: 001_tensorboard.ipynb  00_setup.ipynb  01_tensorboard.ipynb  02_markov_decision_process.ipynb  03_deep_q_network.v2.ipynb  03_deep_q_networks.ipynb  04_policy_gradient.v2.ipynb  04_policy_gradient_methods.ipynb  05_actor_critic.ipynb  05_actor_critic.v2.ipynb  06_evolutionary_algorithm.ipynb  06_evolutionary_algorithm.v2.ipynb  07_distributional_dqn.ipynb  07_distributional_dqn.v2.ipynb  08_intrinsic_curiosity.ipynb  Makefile  actor_critic.py  mp.py  mp_queue.py  pyproject.toml
docs/: 001_tensorboard.md  00_setup.md  01_tensorboard.md  02_markov_decision_process.md  03_deep_q_network.v2.md  03_deep_q_networks.md  04_policy_gradient.v2.md  04_policy_gradient_methods.md  05_actor_critic.md  05_actor_critic.v2.md  06_evolutionary_algorithm.md  06_evolutionary_algorithm.v2.md  07_distributional_dqn.md  07_distributional_dqn.v2.md  08_intrinsic_curiosity.md
environment/: GridBoard.py  Gridworld.py  __init__.py
worker/: worker.py  worker_n_step.py
