[tool.poetry]
name = "python-deep-reinforcement-learning-in-action"
version = "0.1.0"
description = ""
authors = ["alextanhongpin <alextan220990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.0"
jupyterlab = "^4.1.1"
numpy = "^1.26.4"
pandas = "^2.2.0"
matplotlib = "^3.8.3"
black = "^24.2.0"
isort = "^5.13.2"
jupyterlab-code-formatter = "^2.2.1"
tqdm = "^4.66.2"
gym = "^0.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
