[tool.poetry]
name = "python-deep-reinforcement-learning-in-action"
version = "0.1.0"
description = ""
authors = ["alextanhongpin <alextan220990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.0"
jupyterlab = "^4.1.1"
numpy = "^1.26.4"
pandas = "^2.2.0"
matplotlib = "^3.8.3"
black = "^24.2.0"
isort = "^5.13.2"
jupyterlab-code-formatter = "^2.2.1"
tqdm = "^4.66.2"
gymnasium = {extras = ["classic-control"], version = "^0.29.1"}
nes-py = "^8.2.1"
gym-super-mario-bros = "^7.4.0"
gym = "0.23.1"
scikit-image = "^0.22.0"
gridworld = {git = "https://github.com/alextanhongpin/python_gridworld.git"}
ipywidgets = "^8.1.5"
moviepy = "^2.1.1"
tensorboard = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
